# doberman

./: .gitignore  LICENSE  PHASE1_REQUIREMENTS.md  README.md  TAURI_SETUP_GUIDE.md  components.json  index.html  isp-monitor-prd.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  windows-build.yml  windows-release.yml
docs/: windows-builds.md
scripts/: release.sh  tauri-build-macos.sh
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/migrations/: 001_initial.sql  002_advertised_speeds.sql  003_notifications.sql
src-tauri/src/: api.rs  db.rs  lib.rs  macos_notifications.m  main.rs  maintenance.rs  notifications.rs  notifications_macos.rs  outage.rs  ping.rs  speed_test.rs  sse.rs  stats.rs  traceroute.rs  tray.rs
src/components/: DebugPanel.tsx  HeatmapView.tsx  HelpPanel.tsx  LiveChart.tsx  OutageTable.tsx  ReportExport.tsx  SettingsPanel.tsx  SpeedTestPanel.tsx  StatsPanel.tsx  StatusBanner.tsx
src/components/ui/: button.tsx  calendar.tsx  date-picker.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  switch.tsx
src/hooks/: useApi.ts  useSSE.ts
