[package]
name = "doberman"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "doberman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
surge-ping = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-core = "0.3.32"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
